[package]
name = "mini-tickettool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.1", features = ["tokio", "tracing"]}
rmpv = {version = "1.3.0", features =["with-serde"]}
serde = {version = "1.0.217", features = ["std", "derive"]}
socketioxide = {version = "0.16.1", features=["tracing", "state", "v4"]}
sqlx = "0.8.3"
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
