[package]
name = "mini-tickettool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.4", features = ["tokio", "tracing", "macros"]}
http = "1.3.1"
rmpv = {version = "1.3.0", features =["with-serde"]}
serde = {version = "1.0.219", features = ["std", "derive"]}
socketioxide = {version = "0.16.2", features=["tracing", "state", "v4"]}
tokio = {version = "1.45.0", features = ["rt-multi-thread", "macros"]}
tower = {version = "0.5.2", features = ["limit", "buffer", "load-shed"]}
tower-http = {version = "0.6.4", features = ["cors", "compression-full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
